--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 			<section class="newsletter">
 				<h2 class="page-footer-title">Получайте лучшие предложения</h2>
-				<form class="newsletter-form" action="" method="post">
+				<form class="newsletter-form" action="js/" method="post">
 					<label class="visually-hidden" for="newsletter-email">Введите вашу электронную почту</label>
 					<input class="newsletter-email" type="email" id="newsletter-email" name="newsletter-email"
 						placeholder="email@email.ru">
@@ -306,7 +306,7 @@
 			<div class="modal-auth-content">
 				<h2 class="modal-auth-title">Личный кабинет</h2>
 
-				<form class="modal-auth-form" action="" method="post">
+				<form class="modal-auth-form" action="js/" method="post">
 					<p class="field-group">
 						<label class="modal-auth-login" for="login"></label>
 						<input class="field" type="text" id="login" name="login" placeholder="Логин">
